[tool.poetry]
authors = ["seria <seria.ati@gmail.com>"]
description = "Web app to display Hoyo Buddy's commands in real-time"
license = "GPL-3.0"
name = "hoyo-buddy-web-app"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.9.5"
discord-py = "^2.3.2"
flet = "^0.22.1"
python = "^3.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
